# algopay-sdk

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  REPOSITORY_LAYOUT.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml  testing.md
.cursor/plans/: algopay_product_scope.plan.md  algopay_sdk_algorand_port_96edbe11.plan.md  algopay_vs_locus_parity_cef82054.plan.md
.github/workflows/: ci.yml  docs.yml  publish.yml
apps/console/: package.json
apps/web/: package.json
docs/: DEMO.md  DEMO_SCRIPT_5MIN.md  DOCUMENTATION_MAP.md  ENVIRONMENT.md  FUTURE_SCOPE.md  PLATFORM_FEATURE_MATRIX.md  PUBLISHING.md  REFERENCE_LEGACY_OMNIAGENTPAY_AND_ARC_MERCHANT.md  TESTING.md  TESTING_ROADMAP.md  getting-started.md  index.md
docs/ecosystem/: CONTROL_PLANE.md  MONETIZATION.md  algorand-wallet-ux.md  checkout-and-facilitator.md  on-chain-policy.md  wrapped-apis.md  x402-stack.md
docs/guides/: guards.md  intents-batch.md  ledger-storage.md  payments.md  typescript.md  wallets.md  x402.md
docs/reference/: api.md
examples/: basic_payment.py
judging/: Copy of Algorand-Presentation-Template (1).pptx
judging/semifinal/: FEEDBACK_LOG.md  JUDGE_ONE_PAGER.md  LIVE_DEMO_RUNBOOK.md  PANEL_PREP_CHEATSHEET.md  PRESENTATION_SCRIPT.md  README.md  SLIDE_CONTENT.md  TESTING.md  TEST_COVERAGE.md  VALIDATION_KIT.md  architecture.mmd
notebooks/: AlgoPay_SDK_Demo.ipynb
pay/: .env.e2e.example  .env.example  .gitignore  docker-compose.e2e.yml  next.config.ts  package.json  playwright.config.js  playwright.config.ts
pay/e2e/: agents.spec.ts  api-keys.spec.ts  api.spec.ts  approvals.spec.ts  auth.spec.ts  gas.spec.ts  global-setup.js  global-setup.ts  helpers.ts  merchants.spec.ts  navigation.spec.ts  playground.spec.ts  sdk-events.spec.ts
pay/prisma/: dev.db  schema.prisma
python/: .gitignore  README.md  pyproject.toml  research_receipts.csv
python/examples/: demo_colab.ipynb  x402_client_demo.py  x402_payments_demo.ipynb
python/scripts/: check_wheel.py  live_demo_smoke.py  (+5 more)
scripts/: generate_live_demo_wallet.py  live_demo_exhaustive.py  live_demo_smoke.py
site/: .env.example  .gitignore  package.json
tests/: conftest.py  test_algorand_client.py  test_config.py  test_guards_confirm.py  test_guards_justification.py  test_guards_manager.py  test_intents.py  test_ledger.py  test_payment_router.py  test_protocols.py  test_storage_memory.py  test_types.py  test_wallet_repository.py  test_wallet_signer.py
typescript/: .gitignore  README.md  package.json  vitest.config.ts
(+286 files in other folders)
