[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "algopay-sdk"
version = "0.1.0a1"
description = "AlgoPay SDK — payment infrastructure for AI agents on Algorand (x402, USDC/ASA, guards)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "AlgoPay contributors" }]
keywords = ["algopay", "algopay-sdk", "algorand", "x402", "payments", "ai", "agent", "usdc", "asa"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "py-algorand-sdk>=2.6.0",
    "x402-avm[avm]>=2.0.2",
    "pydantic>=2.12.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.2.0",
    "cryptography>=44.0.0",
    "redis>=7.1.0",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.27.0",
]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.0",
    "mypy>=1.19.0",
    "fakeredis[lua]>=2.23.0",
    "respx>=0.22.0",
]

[project.urls]
Homepage = "https://github.com/Algodev-Studio/algopay-sdk"
Documentation = "https://algodev-studio.github.io/algopay-sdk/"
Repository = "https://github.com/Algodev-Studio/algopay-sdk"
Issues = "https://github.com/Algodev-Studio/algopay-sdk/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/algopay"]

[tool.hatch.build.targets.sdist]
include = ["src/algopay"]

[tool.hatch.build]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short -m \"not integration\""
markers = [
    "integration: hits live testnet or external HTTP (run with ALGOPAY_LIVE_TESTNET=1 where noted)",
]

[tool.coverage.run]
source_pkgs = ["algopay"]
branch = true
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
